--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1770,8 +1770,7 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/keycloak.git
       path: "./chart"
-      tag: null
-      branch: "141-confidential-issue"
+      tag: "23.0.7-bb.3"
     helmRepo:
       repoName: "registry1"
       chartName: "keycloak"
@@ -1932,7 +1931,8 @@ addons:
 
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/holocron.git
-      tag: "1.0.3"
+      tag: null
+      branch: "6-confidential-issue"
       path: "./chart"
     helmRepo:
       repoName: "registry1"
