--- a/chart/templates/kyverno-policies/values.yaml
+++ b/chart/templates/kyverno-policies/values.yaml
@@ -176,10 +176,10 @@ policies:
   {{- end }}
 
   require-drop-all-capabilities:
-    validationFailureAction: audit
-    {{- if .Values.neuvector.enabled }}
+    validationFailureAction: Enforce
     exclude:
       any:
+      {{- if .Values.neuvector.enabled }}
       # Neuvector needs access to host to inspect network traffic
       - resources:
           namespaces:
@@ -187,7 +187,35 @@ policies:
           names:
           - neuvector-enforcer-pod*
           - neuvector-prometheus-exporter-pod*
-    {{- end }}
+      {{- end }}
+      {{- if .Values.addons.keycloak.enabled }}
+      - resources:
+          namespaces:
+          - keycloak
+          names:
+          - keycloak-0
+      {{- end }}
+      {{- if .Values.addons.holocron.enabled }}
+      - resources:
+          namespaces:
+          - holocron
+          names:
+          - holocron-postgresql-0
+      {{- end }}
+      {{- if .Values.addons.velero.enabled }}
+      - resources:
+          namespaces:
+          - velero
+          names:
+          - velero-backup-restore-test*
+      {{- end }}
+      {{- if .Values.addons.gitlabRunner.enabled }}
+      - resources:
+          namespaces:
+          - gitlab-runner
+          names:
+          - runner-*
+      {{- end }}
 
   # Kyverno Beta feature - https://kyverno.io/docs/writing-policies/verify-images/
   require-image-signature:
