--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1875,6 +1875,24 @@ addons:
                     - source:
                         namespaces:
                           - monitoring
+        customServiceEntries:
+          - name: "cypress-service-entries-mattermost"
+            enabled: true
+            spec:
+              hosts:
+                - 'registry.npmjs.org'
+                - 'download.cypress.io'
+                - 'cdn.cypress.io'
+                - 'repo1.dso.mil'
+                - 'grafana.dev.bigbang.mil'
+                - 'prometheus.dev.bigbang.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+
       postgresql:
         persistence:
           size: 256Mi
