Adding branch ref to mattermost MR
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1850,6 +1850,9 @@ addons:
           enabled: true
 
   mattermost:
+    git:
+      branch: registry-only-sidecar-mattermost
+      tag: null
     enabled: false
     sso:
       enabled: false
