adding kiali.dev.bigbang.mil to mattermost test-values
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1883,6 +1883,7 @@ addons:
             enabled: true
             spec:
               hosts:
+                - 'kiali.dev.bigbang.mil'
                 - 'registry.npmjs.org'
                 - 'download.cypress.io'
                 - 'cdn.cypress.io'
