Updating test values for mattermost-operator customServiceEntries
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1860,8 +1860,7 @@ addons:
                   - 'download.cypress.io'
                   - 'cdn.cypress.io'
                   - 'repo1.dso.mil'
-                  - 'minio.dev.bigbang.mil'
-                  - 'minio-api.dev.bigbang.mil'
+                  - 'kiali.dev.bigbang.mil'
                 location: MESH_EXTERNAL
                 exportTo:
                   - "."
@@ -1901,23 +1900,6 @@ addons:
                     - source:
                         namespaces:
                           - monitoring
-        customServiceEntries:
-          - name: "cypress-service-entries-mattermost"
-            enabled: true
-            spec:
-              hosts:
-                - 'registry.npmjs.org'
-                - 'download.cypress.io'
-                - 'cdn.cypress.io'
-                - 'repo1.dso.mil'
-                - 'grafana.dev.bigbang.mil'
-                - 'prometheus.dev.bigbang.mil'
-              location: MESH_EXTERNAL
-              ports:
-                - number: 443
-                  protocol: TLS
-                  name: https
-              resolution: DNS
 
       postgresql:
         persistence:
