--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1930,7 +1930,8 @@ addons:
 
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/holocron.git
-      tag: "1.0.3"
+      tag: null
+      branch: 6-confidential-issue"
       path: "./chart"
     helmRepo:
       repoName: "registry1"
