--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1930,8 +1930,7 @@ addons:
 
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/holocron.git
-      tag: null
-      branch: 6-confidential-issue"
+      tag: "1.0.3"
       path: "./chart"
     helmRepo:
       repoName: "registry1"
