--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1930,8 +1930,8 @@ addons:
 
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/holocron.git
-      tag: "1.0.3"
-      path: "./chart"
+      tag: null
+      branch: "main"
     helmRepo:
       repoName: "registry1"
       chartName: "holocron"
