--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1932,6 +1932,7 @@ addons:
       repo: https://repo1.dso.mil/big-bang/product/packages/holocron.git
       tag: null
       branch: "main"
+      path: "./chart"
     helmRepo:
       repoName: "registry1"
       chartName: "holocron"
