--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1931,7 +1931,7 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/holocron.git
       tag: null
-      branch: "main"
+      branch: "6-confidential-issue"
       path: "./chart"
     helmRepo:
       repoName: "registry1"
