--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -54,6 +54,9 @@ networkPolicies:
 
 istio:
   enabled: true
+  git:
+    tag: null
+    branch: "145-Add-custom-network-policies"
   ingressGateways:
     passthrough-ingressgateway:
       type: "LoadBalancer"
