Adding branch ref to kiali test-values
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -106,6 +106,9 @@ jaeger:
           # cypress_keycloak_test_enable: "true"
 
 kiali:
+  git:
+    tag: null
+    branch: troubleshoot-bb-pipeline-errors-1990
   enabled: true
   sso:
     enabled: false
