--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1079,6 +1079,9 @@ monitoring:
 
 grafana:
   enabled: true
+  git:
+    tag: null 
+    branch: "36-renovate-upgrade-grafana-package-dependencies"
   sso:
     enabled: false
     grafana:
