Adding kiali.dev.bigbang.mil to the kiali customserviceentry
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -128,6 +128,7 @@ kiali:
                 - 'cdn.cypress.io'
                 - 'repo1.dso.mil'
                 - 'grafana.dev.bigbang.mil'
+                - 'kiali.dev.bigbang.mil'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
