--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2292,45 +2292,87 @@ addons:
       #   tag: null
       #   branch: 75-egress-whitelist-vault          
 
-        istio:
-          hardened:
-            enabled: true
-            customServiceEntries:
-              - name: "allow-npm-for-cypress-tests"
-                enabled: true
-                spec:
-                  hosts:
-                    - 'registry.npmjs.org'
-                    - 'download.cypress.io'
-                    - 'cdn.cypress.io'
-                  location: MESH_EXTERNAL
-                  ports:
-                    - number: 443
-                      protocol: TLS
-                      name: https
-                  resolution: DNS
-              - name: "allow-repo1-for-cypress"
-                enabled: true
-                spec:
-                  hosts:
-                    - 'repo1.dso.mil'
-                  location: MESH_EXTERNAL
-                  ports:
-                    - number: 443
-                      protocol: TLS
-                      name: https
-                  resolution: DNS
-              - name: "allow-vault-for-cypress"
-                enabled: true
-                spec:
-                  hosts:
-                    - 'vault.dev.bigbang.mil'
-                  location: MESH_EXTERNAL
-                  ports:
-                    - number: 443
-                      protocol: TLS
-                      name: https
-                  resolution: DNS
+        # istio:
+        #   hardened:
+        #     enabled: true
+        #     customServiceEntries:
+        #       - name: "allow-npm-for-cypress-tests"
+        #         enabled: true
+        #         spec:
+        #           hosts:
+        #             - 'registry.npmjs.org'
+        #             - 'download.cypress.io'
+        #             - 'cdn.cypress.io'
+        #           location: MESH_EXTERNAL
+        #           ports:
+        #             - number: 443
+        #               protocol: TLS
+        #               name: https
+        #           resolution: DNS
+        #       - name: "allow-repo1-for-cypress"
+        #         enabled: true
+        #         spec:
+        #           hosts:
+        #             - 'repo1.dso.mil'
+        #           location: MESH_EXTERNAL
+        #           ports:
+        #             - number: 443
+        #               protocol: TLS
+        #               name: https
+        #           resolution: DNS
+        #       - name: "allow-vault-for-cypress"
+        #         enabled: true
+        #         spec:
+        #           hosts:
+        #             - 'vault.dev.bigbang.mil'
+        #           location: MESH_EXTERNAL
+        #           ports:
+        #             - number: 443
+        #               protocol: TLS
+        #               name: https
+        #           resolution: DNS
+
+      istio:
+        hardened:
+          enabled: true
+          customServiceEntries:
+            - name: "allow-npm-for-cypress-tests"
+              enabled: true
+              spec:
+                hosts:
+                  - 'registry.npmjs.org'
+                  - 'download.cypress.io'
+                  - 'cdn.cypress.io'
+                location: MESH_EXTERNAL
+                ports:
+                  - number: 443
+                    protocol: TLS
+                    name: https
+                resolution: DNS
+            - name: "allow-repo1-for-cypress"
+              enabled: true
+              spec:
+                hosts:
+                  - 'repo1.dso.mil'
+                location: MESH_EXTERNAL
+                ports:
+                  - number: 443
+                    protocol: TLS
+                    name: https
+                resolution: DNS
+            - name: "allow-vault-for-cypress"
+              enabled: true
+              spec:
+                hosts:
+                  - 'vault.dev.bigbang.mil'
+                location: MESH_EXTERNAL
+                ports:
+                  - number: 443
+                    protocol: TLS
+                    name: https
+                resolution: DNS
+
+
       bbtests:
         enabled: true
         cypress:
