test new indentation

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2200,14 +2200,18 @@ addons:
           subPath: quarkus.properties
 
   vault:
-    git:
-      tag: null
-      branch: 75-egress-whitelist-vault
+    # git:
+    #   tag: null
+    #   branch: 75-egress-whitelist-vault
     enabled: false
     ingress:
       gateway: "passthrough"
       key: "" # Gets added via chart/ingress-certs.yaml
       cert: "" # Gets added via chart/ingress-certs.yaml
+
+      git:
+        tag: null
+        branch: 75-egress-whitelist-vault
     sso:
       enabled: false
       client_id: dev_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_vault
