Adding grafana test mr ref to test-values
Signed-off-by: Chris Harden <chris@defenseunicorns.com>

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1083,6 +1083,9 @@ monitoring:
           cypress_tnr_password: "tnr_w!G33ZyAt@C8"
 
 grafana:
+  git:
+    tag: null
+    branch: troubleshoot-bb-pipeline-errors-1990
   enabled: true
   sso:
     enabled: false
