--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -709,7 +709,7 @@ kyvernoPolicies:
             to: registry1.dso.mil
       require-drop-all-capabilities:
         enabled: true
-        validationFailureAction: enforce
+        validationFailureAction: audit 
         exclude:
           any:
           # Gitlab Minio sub-chart does not have configurable securityContext values from upstream. Minio installation
