Update exclusions list

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -717,8 +717,12 @@ kyvernoPolicies:
           - resources:
               namespaces:
               - gitlab
+              - holocron
+              - keycloak
               names:
               - gitlab-minio-*
+              - holocron-postgresql-*
+              - keycloak-*
       require-non-root-group:
         exclude:
           any:
