exclude twistlock defender pod

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -710,6 +710,13 @@ kyvernoPolicies:
       restrict-capabilities:
         enabled: true
         validationFailureAction: audit
+        exclude:
+          any:
+          - resources:
+            namespaces:
+            - twistlock
+            names:
+            - twistlock-defender-ds-*
       require-drop-all-capabilities:
         enabled: true
         validationFailureAction: enforce
