Added kyverno-policy for guestbook to require-drop-all-capabilities

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -717,6 +717,11 @@ kyvernoPolicies:
               - gitlab
               names:
               - gitlab-minio-*
+          - resources:
+              namespaces:
+              - argocd
+              names:
+              - guestbook*
       require-non-root-group:
         exclude:
           any:
