toggle deployment of velero

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1725,7 +1725,7 @@ addons:
 
   velero:
     # -- Toggle deployment of Velero.
-    enabled: false
+    enabled: true
 
     # -- Choose source type of "git" or "helmRepo"
     sourceType: "git"
