updating tag to null

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1733,7 +1733,7 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/velero.git
       path: "./chart"
-      #tag: "6.0.0-bb.4"
+      tag: null
       branch: issue-90
     helmRepo:
       repoName: "registry1"
