--- a/chart/templates/authservice/helmrelease.yaml
+++ b/chart/templates/authservice/helmrelease.yaml
@@ -65,4 +65,6 @@ spec:
   - name: monitoring
     namespace: {{ .Release.Namespace }}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
