--- a/chart/templates/eck-operator/helmrelease.yaml
+++ b/chart/templates/eck-operator/helmrelease.yaml
@@ -70,4 +70,6 @@ spec:
       namespace: {{ .Release.Namespace }}
     {{- end }}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
