--- a/chart/templates/gatekeeper/helmrelease.yaml
+++ b/chart/templates/gatekeeper/helmrelease.yaml
@@ -56,4 +56,6 @@ spec:
     - name: {{ .Release.Name }}-gatekeeper-values
       kind: Secret
       valuesKey: "overlays"
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
