--- a/chart/templates/harbor/helmrelease.yaml
+++ b/chart/templates/harbor/helmrelease.yaml
@@ -71,4 +71,6 @@ spec:
       namespace: {{ .Release.Namespace }}
   {{- end }}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
