--- a/chart/templates/jaeger/helmrelease.yaml
+++ b/chart/templates/jaeger/helmrelease.yaml
@@ -74,4 +74,6 @@ spec:
       namespace: {{ .Release.Namespace }}
   {{- end }}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
