--- a/chart/templates/kyverno/helmrelease.yaml
+++ b/chart/templates/kyverno/helmrelease.yaml
@@ -59,4 +59,6 @@ spec:
     - name: gatekeeper
       namespace: {{ .Release.Namespace }}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
