--- a/chart/templates/mattermost/helmrelease.yaml
+++ b/chart/templates/mattermost/helmrelease.yaml
@@ -71,4 +71,6 @@ spec:
     - name: ek
       namespace: {{ $.Release.Namespace }}
     {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
