--- a/chart/templates/wrapper/helmrelease.yaml
+++ b/chart/templates/wrapper/helmrelease.yaml
@@ -76,6 +76,8 @@ spec:
       namespace: {{ $.Release.Namespace }}
     {{- end -}}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 ---
 {{ end -}}
 {{- end -}}
