--- a/chart/templates/anchore/helmrelease.yaml
+++ b/chart/templates/anchore/helmrelease.yaml
@@ -64,4 +64,6 @@ spec:
       namespace: {{ .Release.Namespace }}
     {{- end }}
   {{- end }}
+  
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
