--- a/chart/templates/cluster-auditor/helmrelease.yaml
+++ b/chart/templates/cluster-auditor/helmrelease.yaml
@@ -63,4 +63,6 @@ spec:
   - name: monitoring
     namespace: {{ .Release.Namespace }}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
