--- a/chart/templates/fluentbit/helmrelease.yaml
+++ b/chart/templates/fluentbit/helmrelease.yaml
@@ -88,4 +88,6 @@ spec:
       namespace: {{ .Release.Namespace }}
     {{- end }}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
