--- a/chart/templates/holocron/helmrelease.yaml
+++ b/chart/templates/holocron/helmrelease.yaml
@@ -68,4 +68,6 @@ spec:
       namespace: {{ .Release.Namespace }}
   {{- end }}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
