--- a/chart/templates/istio/helmrelease.yaml
+++ b/chart/templates/istio/helmrelease.yaml
@@ -66,4 +66,6 @@ spec:
     - name: kyverno-policies
       namespace: {{ .Release.Namespace }}
     {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
