--- a/chart/templates/keycloak/helmrelease.yaml
+++ b/chart/templates/keycloak/helmrelease.yaml
@@ -78,4 +78,6 @@ spec:
     namespace: {{ .Release.Namespace }}
   {{- end }}
   {{- end }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
