--- a/chart/templates/kyverno-policies/helmrelease.yaml
+++ b/chart/templates/kyverno-policies/helmrelease.yaml
@@ -57,4 +57,6 @@ spec:
   dependsOn:
     - name: kyverno
       namespace: {{ .Release.Namespace }}
+
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
