--- a/chart/templates/package/helmrelease.yaml
+++ b/chart/templates/package/helmrelease.yaml
@@ -77,6 +77,9 @@ spec:
     {{- if $vals.dependsOn }}
     {{- toYaml $vals.dependsOn | nindent 4 }}
     {{- end }}
+    
+
+  driftDetection: {{ .Values.flux.diftDetection }}
   {{- end }}
 ---
 {{ end -}}
