--- a/chart/templates/promtail/helmrelease.yaml
+++ b/chart/templates/promtail/helmrelease.yaml
@@ -72,4 +72,6 @@ spec:
     - name: kyverno-policies
       namespace: {{ .Release.Namespace }}
     {{- end }}
+    
+  driftDetection: {{ .Values.flux.diftDetection }}
 {{- end }}
