Fixed missing value

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -133,7 +133,7 @@ flux:
     cleanupOnFail: true
   rollback:
     timeout: 10m
-    cleanupOnFail: 
+    cleanupOnFail: true
   diftDetection:
     mode: enabled
 
