--- a/chart/templates/monitoring/helmrelease.yaml
+++ b/chart/templates/monitoring/helmrelease.yaml
@@ -76,5 +76,6 @@ spec:
   {{- end }}
   {{- end }}
 
-  driftDetection: {{ .Values.flux.diftDetection }}
+  driftDetection: 
+    mode: {{ .Values.flux.diftDetection.mode }}
 {{- end }}
