--- a/chart/templates/anchore/helmrelease.yaml
+++ b/chart/templates/anchore/helmrelease.yaml
@@ -65,5 +65,6 @@ spec:
     {{- end }}
   {{- end }}
   
-  driftDetection: {{ .Values.flux.diftDetection }}
+  driftDetection: 
+    mode: {{ .Values.flux.diftDetection.mode }}
 {{- end }}
