--- a/chart/templates/fluentbit/helmrelease.yaml
+++ b/chart/templates/fluentbit/helmrelease.yaml
@@ -89,5 +89,6 @@ spec:
     {{- end }}
   {{- end }}
 
-  driftDetection: {{ .Values.flux.diftDetection }}
+  driftDetection: 
+    mode: {{ .Values.flux.diftDetection.mode }}
 {{- end }}
