--- a/chart/templates/istio/helmrelease.yaml
+++ b/chart/templates/istio/helmrelease.yaml
@@ -67,5 +67,6 @@ spec:
       namespace: {{ .Release.Namespace }}
     {{- end }}
 
-  driftDetection: {{ .Values.flux.diftDetection }}
+  driftDetection: 
+    mode: {{ .Values.flux.diftDetection.mode }}
 {{- end }}
