--- a/chart/templates/mattermost-operator/helmrelease.yaml
+++ b/chart/templates/mattermost-operator/helmrelease.yaml
@@ -77,5 +77,6 @@ spec:
     {{- end }}
   {{- end }}
 
-  driftDetection: {{ .Values.flux.diftDetection }}
+  driftDetection: 
+    mode: {{ .Values.flux.diftDetection.mode }}
 {{- end }}
