--- a/chart/templates/metrics-server/helmrelease.yaml
+++ b/chart/templates/metrics-server/helmrelease.yaml
@@ -72,5 +72,6 @@ spec:
     {{- end }}
   {{- end }}
 
-  driftDetection: {{ .Values.flux.diftDetection }}
+  driftDetection: 
+    mode: {{ .Values.flux.diftDetection.mode }}
 {{- end }}
