--- a/chart/templates/nexus-repository-manager/helmrelease.yaml
+++ b/chart/templates/nexus-repository-manager/helmrelease.yaml
@@ -70,5 +70,6 @@ spec:
   {{- end }}
   {{- end }}
 
-  driftDetection: {{ .Values.flux.diftDetection }}
+  driftDetection: 
+    mode: {{ .Values.flux.diftDetection.mode }}
 {{- end }}
