--- a/chart/templates/sonarqube/helmrelease.yaml
+++ b/chart/templates/sonarqube/helmrelease.yaml
@@ -78,5 +78,6 @@ spec:
   {{- end }}
   {{- end }}
 
-  driftDetection: {{ .Values.flux.diftDetection }}
+  driftDetection: 
+    mode: {{ .Values.flux.diftDetection.mode }}
 {{- end }}
