Fixed spelling error

--- a/chart/templates/gatekeeper/helmrelease.yaml
+++ b/chart/templates/gatekeeper/helmrelease.yaml
@@ -58,5 +58,5 @@ spec:
       valuesKey: "overlays"
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
