--- a/chart/templates/grafana/helmrelease.yaml
+++ b/chart/templates/grafana/helmrelease.yaml
@@ -77,6 +77,6 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
 
