--- a/chart/templates/haproxy/helmrelease.yaml
+++ b/chart/templates/haproxy/helmrelease.yaml
@@ -66,5 +66,5 @@ spec:
     {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
