--- a/chart/templates/argocd/helmrelease.yaml
+++ b/chart/templates/argocd/helmrelease.yaml
@@ -69,5 +69,5 @@ spec:
   {{- end }}
   
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
