--- a/chart/templates/cluster-auditor/helmrelease.yaml
+++ b/chart/templates/cluster-auditor/helmrelease.yaml
@@ -65,5 +65,5 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
