--- a/chart/templates/fluentbit/helmrelease.yaml
+++ b/chart/templates/fluentbit/helmrelease.yaml
@@ -90,5 +90,5 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
