--- a/chart/templates/holocron/helmrelease.yaml
+++ b/chart/templates/holocron/helmrelease.yaml
@@ -70,5 +70,5 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
