--- a/chart/templates/kyverno-policies/helmrelease.yaml
+++ b/chart/templates/kyverno-policies/helmrelease.yaml
@@ -59,5 +59,5 @@ spec:
       namespace: {{ .Release.Namespace }}
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
