--- a/chart/templates/minio/helmrelease.yaml
+++ b/chart/templates/minio/helmrelease.yaml
@@ -60,5 +60,5 @@ spec:
     {{- end }}   
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}   
+    mode: {{ .Values.flux.driftDetection.mode }}   
 {{- end }}
