--- a/chart/templates/promtail/helmrelease.yaml
+++ b/chart/templates/promtail/helmrelease.yaml
@@ -74,5 +74,5 @@ spec:
     {{- end }}
     
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
