--- a/chart/templates/thanos/helmrelease.yaml
+++ b/chart/templates/thanos/helmrelease.yaml
@@ -73,5 +73,5 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
