--- a/chart/templates/twistlock/helmrelease.yaml
+++ b/chart/templates/twistlock/helmrelease.yaml
@@ -77,5 +77,5 @@ spec:
   {{- end }}
 
   driftDetection: 
-    mode: {{ .Values.flux.diftDetection.mode }}
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
