--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -134,7 +134,7 @@ flux:
   rollback:
     timeout: 10m
     cleanupOnFail: true
-  diftDetection:
+  driftDetection:
     mode: enabled
 
 # -- Global NetworkPolicies settings
