--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2400,23 +2400,23 @@ addons:
                   - source:
                       ipBlocks:
                         - 169.254.169.254/32
-          customServiceEntries:
-            - name: "allow-egress-cypress-tests"
-              enabled: true
-              spec:
-                hosts:
-                  - 'registry.npmjs.org'
-                  - 'download.cypress.io'
-                  - 'cdn.cypress.io'
-                  - 'vault.dev.bigbang.mil'
-                  - 'repo1.dso.mil'
-                  - 'kms.us-gov-west-1.amazonaws.com'
-                location: MESH_EXTERNAL
-                ports:
-                  - number: 443
-                    protocol: TLS
-                    name: https
-                resolution: DNS
+          customServiceEntries: []
+            # - name: "allow-egress-cypress-tests"
+            #   enabled: true
+            #   spec:
+            #     hosts:
+            #       - 'registry.npmjs.org'
+            #       - 'download.cypress.io'
+            #       - 'cdn.cypress.io'
+            #       - 'vault.dev.bigbang.mil'
+            #       - 'repo1.dso.mil'
+            #       - 'kms.us-gov-west-1.amazonaws.com'
+            #     location: MESH_EXTERNAL
+            #     ports:
+            #       - number: 443
+            #         protocol: TLS
+            #         name: https
+            #     resolution: DNS
             # - name: "allow-egress-instance-metadata"
             #   enabled: true
             #   spec:
