--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -781,7 +781,7 @@ kyvernoPolicies:
               - volume-upgrade-job*
       restrict-capabilities:
         enabled: true
-        validationFailureAction: audit
+        validationFailureAction: enforce
         exclude:
           any:
           - resources:
