--- a/chart/templates/istio/helmrelease.yaml
+++ b/chart/templates/istio/helmrelease.yaml
@@ -67,6 +67,6 @@ spec:
       namespace: {{ .Release.Namespace }}
     {{- end }}
 
-#  driftDetection: 
-#    mode: {{ .Values.flux.driftDetection.mode }}
+  driftDetection: 
+    mode: {{ .Values.flux.driftDetection.mode }}
 {{- end }}
