--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1393,7 +1393,8 @@ addons:
     git:
       repo: https://repo1.dso.mil/big-bang/product/packages/sonarqube.git
       path: "./chart"
-      tag: "8.0.4-bb.3"
+      # tag: "8.0.4-bb.3"
+      branch: "renovate/ironbank"
     helmRepo:
       repoName: "registry1"
       chartName: "sonarqube"
