#1993 : Pass big bang values through to package charts ### Changed - Package charts now pass through specific bigbang values in the package values so they can be referenced from package value files with template functions

--- a/chart/templates/package/values.yaml
+++ b/chart/templates/package/values.yaml
@@ -3,6 +3,9 @@
 {{- if (dig "enabled" true $vals) -}}
 {{- $pkg = include "resourceName" $pkg -}}
 {{- $defaults := $.Files.Get (printf "defaults/%s.yaml" $pkg) -}}
+{{- $bbvars := pick $.Values "domain" "networkPolicies" -}}
+{{- $merged := mergeOverwrite $vals.values $bbvars -}}
+{{- $_ := set $vals "values" $merged -}}
 {{- if $defaults -}}
 {{- $vals := mergeOverwrite $vals ($defaults | fromYaml).package -}}
 {{- end -}}
