test harbor egress whitelist branch

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2387,13 +2387,40 @@ addons:
   #
   harbor:
     # -- Toggle deployment of harbor
-    enabled: false
-
+    enabled: true
+    git:
+      tag: null
+      branch: "68-egress-whitelist-harbor-2"
     # -- Values to pass through to Habor chart: https://repo1.dso.mil/big-bang/product/packages/harbor.git
     values:
       istio:
         hardened:
           enabled: true
+          customServiceEntries:
+          - name: "allow-npm-for-cypress-tests"
+            enabled: true
+            spec:
+              hosts:
+                - 'registry.npmjs.org'
+                - 'download.cypress.io'
+                - 'cdn.cypress.io'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
+          - name: "allow-repo1-for-cypress"
+            enabled: true
+            spec:
+              hosts:
+                - 'repo1.dso.mil'
+              location: MESH_EXTERNAL
+              ports:
+                - number: 443
+                  protocol: TLS
+                  name: https
+              resolution: DNS
       expose:
         type: clusterIP
         tls:
