--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -1746,6 +1746,7 @@ addons:
                   - 'registry.npmjs.org'
                   - 'download.cypress.io'
                   - 'cdn.cypress.io'
+                  - 'sonarqube.dev.bigbang.mil'
                 location: MESH_EXTERNAL
                 ports:
                   - number: 443
