add harbor domain for tests

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2404,6 +2404,7 @@ addons:
                 - 'registry.npmjs.org'
                 - 'download.cypress.io'
                 - 'cdn.cypress.io'
+                - 'harbor.dev.bigbang.mil'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
