add index.docker.io for tests

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2405,6 +2405,7 @@ addons:
                 - 'download.cypress.io'
                 - 'cdn.cypress.io'
                 - 'harbor.dev.bigbang.mil'
+                - 'index.docker.io'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
