test "NONE" resolution mode

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2411,7 +2411,7 @@ addons:
                 - number: 443
                   protocol: TLS
                   name: https
-              resolution: DNS
+              resolution: NONE
           - name: "allow-repo1-for-cypress"
             enabled: true
             spec:
