add wildcard for cloudflare.docker.com

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2406,6 +2406,7 @@ addons:
                 - 'cdn.cypress.io'
                 - 'harbor.dev.bigbang.mil'
                 - '*.docker.io'
+                - '*.cloudflare.docker.com'
               location: MESH_EXTERNAL
               ports:
                 - number: 443
