--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2021,6 +2021,9 @@ addons:
     #   make a valid pem file with proper wrapping at 64 characters per line
     #     fold -w 64 nexus-x509.txt > nexus.pem
     #   In Keycloak go to the nexus client and on the Keys tab import the nexus.pem file in two places
+    git:
+      tag: null
+      branch: "102-nexus-sidecar"
     values:
       istio:
         enabled: true
