add nexus to test service entry

--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2040,6 +2040,7 @@ addons:
                   - 'download.cypress.io'
                   - 'cdn.cypress.io'
                   - 'repo1.dso.mil'
+                  - 'nexus.dev.bigbang.mil'
                 location: MESH_EXTERNAL
                 ports:
                   - number: 443
