--- a/tests/test-values.yaml
+++ b/tests/test-values.yaml
@@ -2417,6 +2417,17 @@ addons:
                     protocol: TLS
                     name: https
                 resolution: DNS
+            - name: "allow-vault-seal"
+              enabled: true
+              spec:
+                hosts:
+                  - '127.0.0.1'
+                location: MESH_INTERNAL
+                ports:
+                  - number: 8200
+                    protocol: TLS
+                    name: vault
+                resolution: STATIC
       bbtests:
         enabled: true
         cypress:
